<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:foregroundTint="#000000"
    tools:context=".activities.AddActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="34dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/newTask"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/taskName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#888888"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:hint="@string/instr1"
                android:inputType="textPersonName"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray" />

            <EditText
                android:id="@+id/taskDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#888888"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:hint="@string/instr2"
                android:inputType="textPersonName"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray" />

            <TextView
                android:id="@+id/instr3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/instr3"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <CalendarView
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/CalenderViewCustom" />

            <TextView
                android:id="@+id/instr4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/instr4"
                android:textColor="@color/gray"
                android:textSize="18sp" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/CalenderViewCustom"
                android:timePickerMode="spinner" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/instr5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/instr5"
                    android:textColor="@color/gray"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:dropDownSelector="@color/black"
                    android:pointerIcon="arrow"
                    android:popupBackground="@color/white"
                    android:scrollbars="none"
                    android:spinnerMode="dropdown"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/gray" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/instr6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/instr6"
                    android:textColor="@color/gray"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/priority"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:dropDownSelector="@color/black"
                    android:popupBackground="@color/white"
                    android:scrollbars="none"
                    android:spinnerMode="dropdown"
                    android:textColor="@color/black"
                    app:backgroundTint="@color/gray" />
            </LinearLayout>

            <Button
                android:id="@+id/accept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:onClick="addTask"
                android:text="@string/ok" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>